<resources>
  <string name="app_name">Wizard Scoreboard</string>
  <string name="buttonGameBids">Bids</string>
  <string name="buttonGameTricks">Tricks</string>

  <string name="okay">OK</string>
  <string name="cancel">Cancel</string>

  <string name="dialog_edit_tricks_title">Edit Tricks</string>
  <string name="dialog_add_tricks_title">Add Tricks</string>
  <string name="dialog_edit_bid_title">Edit Bids</string>
  <string name="dialog_add_bid_title">Add Bids</string>


  <string name="roboto_regular">sans-serif</string>
  <string name="roboto_light">sans-serif-light</string>
  <string name="roboto_condensed">sans-serif-condensed</string>
  <string name="roboto_thin">sans-serif-thin</string>
  <string name="roboto_medium">sans-serif-medium</string>

  <string name="number_picker_formatter">%02d</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="player_nickname">Nickname</string>
  <string name="player_name">Name</string>
  <string name="dialog_add_player_title">Add Player</string>
  <string name="dialog_edit_player_title">Edit Player</string>
  <string name="round">Round</string>
  <string name="round_number">Round: %1$d</string>
  <string name="new_game">New Game</string>
  <string name="resume_game">Resume Game</string>
  <string name="statistics">Statistics</string>
  <string name="load_game">Load Game</string>
  <string name="manage_players">Manage Players</string>
  <string name="player_amount">Please select 3 to 6 players.</string>
  <string name="no_game_found">No game found!</string>
  <string name="edit">Edit</string>
  <string name="dialog_delete_player">The players statistics and the current game will be deleted if the player is involved. Are you sure?</string>
  <string name="create_game">Create Game</string>
  <string name="dialog_game_won">%1$s have/has won the game!</string>
</resources>
