<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
      android:id="@+id/buttonManagePlayers"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/manage_players"
      app:layout_constraintEnd_toEndOf="@+id/buttonLoadGame"
      app:layout_constraintStart_toStartOf="@+id/buttonLoadGame"
      app:layout_constraintTop_toBottomOf="@+id/buttonLoadGame"/>

    <Button
        android:id="@+id/buttonResumeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
      android:text="@string/resume_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
      android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="@+id/buttonResumeGame"
        app:layout_constraintStart_toStartOf="@+id/buttonResumeGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonResumeGame" />

    <Button
        android:id="@+id/buttonStatistics"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
      android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="@+id/buttonManagePlayers"
        app:layout_constraintStart_toStartOf="@+id/buttonManagePlayers"
        app:layout_constraintTop_toBottomOf="@+id/buttonManagePlayers" />
  <Button
    android:id="@+id/buttonLoadGame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/load_game"
    app:layout_constraintEnd_toEndOf="@+id/buttonNewGame"
    app:layout_constraintStart_toStartOf="@+id/buttonNewGame"
    app:layout_constraintTop_toBottomOf="@+id/buttonNewGame"/>
</androidx.constraintlayout.widget.ConstraintLayout>